applications/finances/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finances
  namespace: finances
  labels:
    app: finances
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finances
  template:
    metadata:
      labels:
        app: finances
    spec:
      containers:
      - name: finances
        image: tiquinhonew/finances:583984f04c592af7daf0bb2ab18e0333bc58a888
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
