applications/finances/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances-ingress
  namespace: finances
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "finances.app.ojuara.tech"
    secretName: finances-tls
  rules:
  - host: finances.app.ojuara.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finances
            port:
              number: 80
